--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
         "@babel/preset-env": "^7.8.4",
         "@babel/preset-react": "^7.8.3",
         "babel-loader": "^8.0.5",
-        "webpack": "^4.41.6",
-        "webpack-cli": "^3.3.11"
+        "css-loader": "^6.7.3",
+        "sass": "^1.57.1",
+        "sass-loader": "^13.2.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     }
 }
