--- a/package.json
+++ b/package.json
@@ -19,18 +19,23 @@
         "express-slow-down": "^1.3.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^5.1.2",
-        "react-transition-group": "^4.3.0"
+        "react-transition-group": "^4.3.0",
+        "redux": "^4.2.1",
+        "redux-thunk": "^2.4.2"
     },
     "devDependencies": {
         "@babel/core": "^7.8.4",
         "@babel/preset-env": "^7.8.4",
         "@babel/preset-react": "^7.8.3",
+        "@redux-devtools/core": "^3.13.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^6.7.3",
         "sass": "^1.57.1",
         "sass-loader": "^13.2.0",
         "style-loader": "^3.3.1",
+        "url-loader": "^4.1.1",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
     }
